--- a/style.css
+++ b/style.css
@@ -8,11 +8,28 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+}
+/*root*/
+
+:root{
+    --bg-color: #1f242d;
+    --second--bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #f1c40f;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body{
-    background-color: #1f242d;
-    color: #fff;
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 .main-header{
@@ -28,8 +45,15 @@ body{
     z-index: 100;
 }
 
+@media screen and (max-width: 768px){
+    .main-header{
+        padding: 20px 5%;
+    }
+    
+}
+
 .main-header .logo{
-    color: #fff;
+    color: var(--text-color);
     font-size: 30px;
     font-weight: 600;
     text-decoration: none;
@@ -39,7 +63,7 @@ body{
 
 .main-header .navbar a{
     display: inline-block;
-    color: #fff;
+    color: var(--text-color);
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
@@ -59,6 +83,7 @@ body{
 /* Path: main-home */
 
 .home {
+    /* flex-wrap: wrap; */
     position: relative;
     width: 100%;
     height: 100vh;
@@ -68,23 +93,30 @@ body{
     padding: 70px 10% 0;
 }
 
+@media screen and (max-width: 768px){
+    .home{
+        display: block;
+    }
+}
+
 .home-content{
     max-width: 600px;
+    /* flex-wrap: wrap; */
 }
-.home-content h3{
+ h3{
     font-size: 32px;
     font-weight: 700;
     opacity: 0;
     animation: slideBotton 1s ease forwards;
     animation-delay: .5s;
 }
-.home-content h3 span{
+ h3 span{
     color: #f1c40f;
 }
 /* .home-content h3:nth-of-type(2){
     margin-bottom: 30px;
 } */
-.home-content h1{
+ h1{
     font-size: 56px;
     font-weight: 700;
     margin: 20px 0;
@@ -92,7 +124,7 @@ body{
     animation: slideRight 1s ease forwards;
     animation-delay: 1s;
 }
-.home-content p{
+ p{
     font-size: 16px;
     font-weight: 500;
     margin: 20px 0;
@@ -113,8 +145,8 @@ body{
     display: inline-block;
     width: 40px;
     height: 40px;
-    background: #fff;
-    color: #1f242d;
+    background: var(--text-color);
+    color: var(--bg-color);
     font-size: 20px;
     line-height: 40px;
     text-align: center;
@@ -127,16 +159,16 @@ body{
 }
 
 .social-media a:hover{
-    background: #f1c40f;
-    color: #fff;
-    box-shadow: 0 0 10px #f1c40f;
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 0 0 10px var(--main-color);
 }
 
 .btn{
     display: inline-block;
     padding: 10px 30px;
-    background: #f1c40f;
-    color: #1f242d;
+    background: var(--main-color);
+    color: var(--bg-color);
     font-size: 16px;
     font-weight: 600;
     border-radius: 50px;
@@ -149,10 +181,75 @@ body{
 }
 
 .btn:hover{
-    background: #fff;
-    color: #f1c40f;
-    box-shadow: 0 0 10px #f1c40f;
+    background: var(--text-color);
+    color: var(--main-color);
+    box-shadow: 0 0 10px var(--main-color);
 }
+
+/* about page */
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second--bg-color);
+}
+.about-img{
+    width: 35vw;
+}
+.heading{
+    text-align: center;
+    font-size: 4.5rem;
+}
+@media screen and (max-width: 768px){
+    .about{
+        display: block;
+    }
+}
+
+/*service css*/
+
+.service h2{
+    margin-bottom: 5rem;
+}
+
+.services-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.services-container .services-box{
+    flex: 1 1 30rem;
+    background-color: var(--second--bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+}
+
+.services-box i{
+    font-size: 7rem;
+    color: var(--main-color);
+}
+.services-box h3{
+    font-size: 2.6rem;
+}
+.services-box p{
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+
+/*
+.about-content h2{
+    text-align: left;
+    line-height: 1.2;
+} */
+
+
 
 /* Path: animation */
 
